--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
   <meta charset="UTF-8">
   <title>Dom Challenge</title>
@@ -10,7 +10,7 @@
       padding: 10px;
     }
   </style>
-</head>
+</head> -->
 <body>
   <h1>
     Welcome to the DOM Challenge
@@ -39,7 +39,7 @@
 
   </div>
 
-  <script src="js/index.min.js"></script>
+ <!-- // <script src="js/index.min.js"></script> -->
   <script src="js/challenge.js"></script>
 </body>
 </html>
